--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,9 @@
-standard_url: "https://www.2txt.de/"
+standard_url: "https://www.2txt.de"
 max_iterations: 5
 scrapy_project_path: "./quelltext_scraper"
 output_file: "quelltext.txt"
+text_output_file: "website_text.txt"
 llm_model: "llama3.2:3b"
 spider_temp_file: "temp_spider_run.py"
+standard_process: "process_links"
+#standard_process: "process_text"
